js/js.translator/testData/incremental/invalidation/fakeOverrideClassFunctionQualifiersWithCrossModuleInliner/lib1/l1.1.kt
open class Module2OpenClass {
    public suspend fun testFunction2() = 2
    public fun testFunction22() = 22
}
